--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
       <artifactId>hibernate-validator</artifactId>
       <version>6.2.0.Final</version> <!-- Используйте актуальную версию -->
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>3.3.0</version>
+    </dependency>
 
   </dependencies>
   <build>
